feat: install Authelia
Redis and PostgreSQL are disabled because HA is probably unnecessary
in a home environment.

--- a/platform/dex/templates/secret.yaml
+++ b/platform/dex/templates/secret.yaml
@@ -11,13 +11,9 @@ spec:
     name: dex-secrets
   data:
     # Connectors
-    - secretKey: GITEA_CLIENT_ID
+    - secretKey: AUTHELIA_CLIENT_SECRET
       remoteRef:
-        key: gitea.dex
-        property: client_id
-    - secretKey: GITEA_CLIENT_SECRET
-      remoteRef:
-        key: gitea.dex
+        key: authelia.dex
         property: client_secret
     # Clients
     - secretKey: GRAFANA_SSO_CLIENT_SECRET
