--- a/platform/dex/values.yaml
+++ b/platform/dex/values.yaml
@@ -8,14 +8,19 @@ dex:
     oauth2:
       skipApprovalScreen: true
     connectors:
-      - type: gitea
-        id: gitea
-        name: Gitea
+      - type: oidc
+        id: authelia
+        name: Authelia
         config:
-          clientID: $GITEA_CLIENT_ID
-          clientSecret: $GITEA_CLIENT_SECRET
+          issuer: https://auth.khuedoan.com
+          clientID: dex
+          clientSecret: $AUTHELIA_CLIENT_SECRET
           redirectURI: https://dex.khuedoan.com/callback
-          baseURL: https://git.khuedoan.com
+          scopes:
+            - openid
+            - profile
+            - email
+            - groups
     staticClients:
       - id: grafana-sso
         name: Grafana
